# ed-li

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  fly.toml  package-lock.json
assets/: tailwind.css
src/: main.rs  page.rs
src/page/: home.rs  portfolio.rs
